tests/pass/run/imported_instance_method_parity/main.kira
import support as Support

@Main
function main() {
    let app: Support.Application = Support.Application()
    print(app.run())
    return
}
