tests/fail/semantics/direct_ffi_requires_native/main.kira
@FFI.Extern { library: testlib; symbol: ffi_value; abi: c; }
function ffi_value(): I64;

@Main
function entry() {
    ffi_value()
    return
}
